# SIH-2025-Grandfinale

./: .env.example  .gitignore  Aboutschemes.txt  App.tsx  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  QUICK_START.md  README.md  REALTIME_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SUPABASE_SETUP.md  index.html  metadata.json  package-lock.json  package.json  supabase-schema.sql  types.ts  vite.config.ts
Backend + Blockchain + NFT/: .gitignore  hardhat.config.js  package-lock.json  package.json
Backend + Blockchain + NFT/offchain/: Cargo.toml
Backend + Blockchain + NFT/offchain/data/: crop-clusters.json  deployment-error.json  farmers_db.json  pinata-deployment-results.json
Backend + Blockchain + NFT/offchain/data/0/: fpo_purchase.json
Backend + Blockchain + NFT/offchain/data/21/: fpo_purchase.json
Backend + Blockchain + NFT/offchain/data/2331/: fpo_purchase.json
Backend + Blockchain + NFT/offchain/data/23322/: fpo_purchase.json
Backend + Blockchain + NFT/offchain/data/234/: fpo_purchase.json
Backend + Blockchain + NFT/offchain/data/43/: fpo_purchase.json
Backend + Blockchain + NFT/offchain/src/: chain.rs  config.rs  demo_handlers.rs  error.rs  farmer_verification.rs  ipfs.rs  lib.rs  local_blockchain.rs  main.rs  routes.rs  state.rs  supply_chain_handlers.rs  workflows.rs
Dashboards/: AboutSchemes.tsx  AdvisoryPage.tsx  BiddingPage.tsx  DashboardPage.tsx  FPODashboard.tsx  FarmerDashboard.tsx  FarmerWorkflow.tsx  FinancialPlanningPage.tsx  GovernmentDashboard.tsx  Layout.tsx  LoginPage.tsx  ProcessorDashboard.tsx  RetailerDashboard.tsx  (+2 more)
(+51 files in other folders)
