[package]
name = "offchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "timeout"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# HTTP client for IPFS
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }

# Date and time
chrono = "0.4"

# Random number generation
rand = "0.8"

# Hex encoding/decoding
hex = "0.4"

# Hashing
sha2 = "0.10"

# Directory traversal
walkdir = "2.0"

# Ethereum / Blockchain
alloy = { version = "0.6", default-features = false, features = [
    "contract",
    "network",
    "providers",
    "provider-http",
    "rpc-types",
    "rpc-types-eth",
    "signer-local",
    "sol-types",
    "reqwest-rustls-tls"
] }

[dev-dependencies]
